--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                             <div class="frete1"></div>
                             <div class="conteudo_card">
                                 <div class="imagem_produto">
-                                    <img src="./img/produtos/15_.jpg" alt="">
+                                    <img src="./img/produtos/15.jpg" alt="">
                                 </div>
                                 <div class="desc_produto">
                                     <div class="titulo_produto">
